[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tirf_tools"
version = "0.5.2"
description = "colllection of tools to analyse single-molecule data from TIRF microscopes"
readme = "README.rst"
authors = [
  {name = "Stefan H. Mueller", email = "smueller@uow.edu.au"}
]
maintainers = [
  {name = "Stefan H. Mueller", email = "smueller@uow.edu.au"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "numpy >=1.26.4",
  "scipy >=1.11.4",
  "matplotlib >= 3.5.1",
  "dask >=2022.02.1",
  "dask-image >=2023.03.0",
  "aicsimageio >=4.14.0",
  "skimage >=0.19.2",
  "pandas >=2.0.3",
  "tqdm >=4.64.0"
]




[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/stefanhmueller/tirf_tools/issues"
changelog = "https://github.com/stefanhmueller/tirf_tools/blob/master/changelog.md"
homepage = "https://github.com/stefanhmueller/tirf_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

