[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tirf_tools"
version = "0.5.3"
description = "colllection of tools to analyse single-molecule data from TIRF microscopes"

dynamic = ["dependencies","readme"]
authors = [
  {name = "Stefan H. Mueller", email = "smueller@uow.edu.au"}
]
maintainers = [
  {name = "Stefan H. Mueller", email = "smueller@uow.edu.au"}
]
classifiers = [
]
requires-python = ">=3.9"

license = {text = "MIT license"}


[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/stefanhmueller/tirf_tools/issues"
changelog = "https://github.com/stefanhmueller/tirf_tools/blob/master/changelog.md"
homepage = "https://github.com/stefanhmueller/tirf_tools"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

readme = {file = ["README"], content-type = "text/markdown"}

[tool.setuptools.package-data]
"*" = ["*.*"]
